--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBE-mBHrB-5pfnvH_LP9CAQyIKiVgF3N1Q",
+    apiKey: "",
     authDomain: "chat-4040f.firebaseapp.com",
     databaseURL: "https://chat-4040f.firebaseio.com",
     projectId: "chat-4040f",
